--- a/app.css
+++ b/app.css
@@ -43,7 +43,7 @@ ul {
   line-height: 35px;
   font-weight: 400;
   letter-spacing: 1px;
-  font-size: 28px;
+  font-size: 1.7rem;
 }
 .slider-text-container p {
   color: #fff;
@@ -86,7 +86,7 @@ ul {
 }
 
 .menu-icon {
-  width: 1.2rem;
+  width: 1.1rem;
 }
 .w-100 {
   width: 100%;
@@ -152,7 +152,7 @@ ul {
 }
 .section-cards-text1 h3 {
   font-size: 24px;
-  font-weight: 300;
+  font-weight: 400;
   color: #2c2c2c;
   line-height: 38px;
 }
@@ -179,9 +179,9 @@ ul {
   padding: 1rem;
 }
 .section-iframe-text h3 {
-  font-size: 30px;
+  font-size: 1.5rem;
   line-height: 40px;
-  font-weight: 300;
+  font-weight: 400;
   color: #2c2c2c;
 }
 .section-iframe-text p {
@@ -257,7 +257,7 @@ ul {
   margin-bottom: 10px;
 }
 .sc-are-h h3 {
-  font-size: 27px;
+  font-size: 1.7rem;
   font-weight: 400;
   color: #fff;
   line-height: 35px;
@@ -275,7 +275,7 @@ ul {
   padding-top: 1rem;
 }
 .img1-sc-are img {
-  height: 5rem;
+  height: 4rem;
 }
 .img2-sc-are-cn {
   justify-content: center;
@@ -300,6 +300,9 @@ ul {
   margin-bottom: 13px;
 }
 
+.sc-are-img img {
+  height: 2rem;
+}
 @media only screen and (min-width: 320px) {
   .container {
     max-width: 85%;
@@ -340,7 +343,9 @@ ul {
     flex-wrap: nowrap;
     margin-top: 3rem;
   }
-
+  .sc-are-img img {
+    height: 100%;
+  } 
   .slider-text-container{
     padding-top: 5rem;
   }
@@ -458,7 +463,7 @@ ul {
     padding: 0 6rem;
   }
   .section-iframe-text h3 {
-    font-size: 43px;
+    font-size: 45px;
     line-height: 62px;
     font-weight: 400;
   }
@@ -485,10 +490,10 @@ ul {
     padding: 1rem;
   }
   .sc-are-h h3 {
-    font-size: 46px;
     font-weight: 400;
     color: #fff;
     line-height: 60px;
+    font-size: 3rem;
   }
   .sc-are-img {
   align-items: center;
