--- a/app.css
+++ b/app.css
@@ -239,7 +239,7 @@ ul {
   font-size: 15px;
   line-height: 28px;
   color: #727272;
-
+  display: flex;
   margin-bottom: 5px;
   font-weight: 400;
 }
